# alexjser_mcp_demo

./: README.md  pyproject.toml
src/alexjser_mcp_demo/: __init__.py
